--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -113,7 +113,15 @@ jobs:
       - run: sudo mkdir -p $DEPLOY_DIR
 
       # Build the i386 Dockerfile image.
-      - run: docker build . --tag $TAG --file ${{ github.event.inputs.DOCKERFILE_PATH }} --platform=i386
+      - uses: docker/setup-qemu-action
+      - uses: docker/setup-buildx-action
+      - uses: docker/build-push-action
+        with:
+          context: .
+          tags: ${{ env.TAG }}
+          platforms: i386
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
       
       # Run the docker image so that we can export the container.
       # Run the Docker container with the Google Public DNS nameservers: 8.8.8.8, 8.8.4.4
