--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -113,9 +113,9 @@ jobs:
       - run: sudo mkdir -p $DEPLOY_DIR
 
       # Build the i386 Dockerfile image.
-      - uses: docker/setup-qemu-action
-      - uses: docker/setup-buildx-action
-      - uses: docker/build-push-action
+      - uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/build-push-action@v5
         with:
           context: .
           tags: ${{ env.TAG }}
