Fix buildx Dockerfile path
Signed-off-by: GitHub <noreply@github.com>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -119,6 +119,7 @@ jobs:
         with:
           context: .
           tags: ${{ env.TAG }}
+          file: ${{ github.event.inputs.DOCKERFILE_PATH }}
           platforms: i386
           cache-from: type=gha
           cache-to: type=gha,mode=max
