--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -113,17 +113,7 @@ jobs:
       - run: sudo mkdir -p $DEPLOY_DIR
 
       # Build the i386 Dockerfile image.
-      - uses: docker/setup-qemu-action@v3
-      - uses: docker/setup-buildx-action@v3
-      - uses: docker/build-push-action@v5
-        with:
-          load: true
-          context: .
-          tags: ${{ env.TAG }}
-          file: ${{ github.event.inputs.DOCKERFILE_PATH }}
-          platforms: i386
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+      - run: docker build . --tag $TAG --file ${{ github.event.inputs.DOCKERFILE_PATH }} --platform=i386 --cache-from type=gha --cache-to type=gha,mode=max
       
       # Run the docker image so that we can export the container.
       # Run the Docker container with the Google Public DNS nameservers: 8.8.8.8, 8.8.4.4
