--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -123,7 +123,7 @@ jobs:
       # Run the Docker container with the Google Public DNS nameservers: 8.8.8.8, 8.8.4.4
       - run: |
           docker run --dns 8.8.8.8 --dns 8.8.4.4 -d $TAG
-          echo "CONTAINER_ID=$(sudo docker ps -aq)" >> $GITHUB_ENV
+          echo "CONTAINER_ID=$(sudo docker ps -aql)" >> $GITHUB_ENV
 
       # We extract the CMD, we first need to figure whether the Dockerfile uses CMD or an Entrypoint.
       - name: Extracting CMD / Entrypoint and args
